text overflow basic fix

--- a/frontend/src/pages/playlistDetails/PlaylistDetails.css
+++ b/frontend/src/pages/playlistDetails/PlaylistDetails.css
@@ -27,8 +27,11 @@
     border-radius: var(--radius);
 }
 
-.playlist-text {
+.pc .playlist-text {
     width: 60%;
+}
+
+.playlist-text {
     display: grid;
     gap: 0.8em;
 }
@@ -36,6 +39,8 @@
 .playlist-header h1 {
     font-size: 2rem;
     font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .playlist-name-edit {
